# superficial-thinking

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
dawn_shuttle/dawn_shuttle_superficial_thinking/: __init__.py
dawn_shuttle/dawn_shuttle_superficial_thinking/src/: __init__.py
dawn_shuttle/dawn_shuttle_superficial_thinking/src/core/: config.py  prompts.py  types.py
dawn_shuttle/dawn_shuttle_superficial_thinking/src/data/: __init__.py  agent.py  async_index.py  fuzzy.py  index.py  manager.py  working.py
dawn_shuttle/dawn_shuttle_superficial_thinking/src/db/: __init__.py  schema.sql  storage.py
docs/: DESIGN.md
