[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dawn_shuttle_superficial_thinking"
version = "0.1.2"
description = "Dawn Shuttle - 基于推理的 LLM 记忆层"
readme = "README.md"
license = "LGPL-2.1-or-later"
requires-python = ">=3.10"
dependencies = [
    "dawn_shuttle_intelligence>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.9.7",
    "black==25.1.0",
    "mypy==1.14.1",
    "bandit==1.8.3",
]

[tool.hatch.build.targets.wheel]
packages = ["dawn_shuttle"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
show_error_codes = true

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501", "RUF001", "RUF002", "RUF003"]  # 忽略行太长和中文标点警告

[tool.ruff.lint.isort]
known-first-party = ["dawn_shuttle"]
